Remove multiple string occurrences (Sonar rule java:S1192)
Signed-off-by: Claudio Mezzasalma <claudio.mezzasalma@eurotech.com>